# agent-skills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
scripts/: demo-highlight.sh
skills/markdown-review/: README.md  SKILL.md  cliutil.py  conftest.py  demo-highlight.sh  frontend.py  mdedit.py  model.py  server.py  test_cli.py  test_cliutil.py  test_comment_edit_reply.py  test_comment_highlights.py  test_frontend.py  test_idle_shutdown.py  test_model.py  test_render.py  test_server.py  test_share.py  update-vendor.sh
skills/plainenglish/: SKILL.md
