# This file holds only tool configuration (no packaging): it lets `ruff`,
# `mypy`, and `uv` pick up settings from the repo root, and declares the
# supported Python range so the test matrix floor is explicit. There is no
# [build-system]; uv treats this as a virtual (non-installable) project.

[project]
name = "agent-skills"
version = "0"
requires-python = ">=3.10"

# Dev/test-only tooling. Each skill itself stays pure-stdlib at runtime; these
# groups are never part of a distributed skill and are only consumed by `uv`
# (`uv run --group test …`) and CI. `browser` is a superset of `test` (it adds
# Playwright + Chromium for the headless browser tests), so installing it also
# runs the plain pytest suite.
#
# Use PEP 735 dependency groups rather than `[project.optional-dependencies]`
# because this is a virtual (non-installable) project: there is no
# `[build-system]` and nothing to ship. Dependency groups are the right tool
# for dev-only requirements that aren't tied to a distribution.
#
# Versions are kept reproducible via the committed `uv.lock`; the lower bounds
# below just document the minimum we test against.
[dependency-groups]
test = ["pytest>=9"]
browser = ["pytest>=9", "playwright>=1.40"]

[tool.ruff]
# The mdedit.py docstring declares a 3.10+ minimum. Each skill's scripts are
# standalone (no installed package), so we lint by path from the repo root.
target-version = "py310"
extend-exclude = [".venv", "vendor"]

[tool.ruff.lint]
# Start from ruff's curated defaults (E4, E7, E9, F). E501 / line-length is
# intentionally omitted: that's the formatter's job (`ruff format`), and
# mdedit.py embeds long HTML/CSS/JS string literals that can't be wrapped.
# Add import sorting, modern pyupgrade rewrites, and bugbear checks.
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

# `ruff format` is enforced in CI (`.github/workflows/ci.yml`); run `ruff
# format` locally before pushing. The line-length is left to ruff's default
# (88), which is the formatter's responsibility — E501 is intentionally not
# selected above.

[tool.mypy]
python_version = "3.10"
# The scripts under skills/ are standalone CLI tools with no third-party deps,
# so keep type-checking pragmatic rather than strict.
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
# Type-check every mdedit source module (model/frontend/server/cliutil/mdedit).
# Test files are excluded: they import Playwright optionally and drive the tool
# as a subprocess, so they aren't part of the typed surface. Following imports
# means checking mdedit.py already pulls in the modules it depends on, but
# listing the directory makes new modules covered automatically.
files = ["skills/markdown-review"]
exclude = ['test_.*\.py$']

[tool.pytest.ini_options]
# Discover every skill's tests without naming files in CI. Browser tests use
# `pytest.importorskip("playwright…")`, so they skip cleanly when only the
# `test` group is installed and run when the `browser` group is.
testpaths = ["skills"]
